[package]
name = "splitv"
version = "0.1.1"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"
repository = "https://github.com/statiolake/splitv-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Show texts side by side"

[dependencies]
unicode-width = "0.1.5"
itertools = "0.8.0"
